Prevent overlap

--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ building-block:nth-of-type(17) {
     border-radius: 100%;
   }
   16.5%,
-  27.5% {
+  34.5% {
     /* (1, 1) */
     left: calc(var(--blocks-phase-one-left) + 1 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 1 * var(--block-height));
@@ -488,7 +488,7 @@ building-block:nth-of-type(1) {
     border-radius: 100%;
   }
   17%,
-  27.5% {
+  34.5% {
     /* (2, 1) */
     left: calc(var(--blocks-phase-one-left) + 2 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 1 * var(--block-height));
@@ -555,7 +555,7 @@ building-block:nth-of-type(2) {
     border-radius: 100%;
   }
   17.5%,
-  27.5% {
+  34.5% {
     /* (1, 2) */
     left: calc(var(--blocks-phase-one-left) + 1 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 2 * var(--block-height));
@@ -622,7 +622,7 @@ building-block:nth-of-type(3) {
     border-radius: 100%;
   }
   18%,
-  27.5% {
+  34.5% {
     /* (1, 3) */
     left: calc(var(--blocks-phase-one-left) + 1 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 3 * var(--block-height));
@@ -689,7 +689,7 @@ building-block:nth-of-type(4) {
     border-radius: 100%;
   }
   18.5%,
-  27.5% {
+  34.5% {
     /* (1, 4) */
     left: calc(var(--blocks-phase-one-left) + 1 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 4 * var(--block-height));
@@ -756,7 +756,7 @@ building-block:nth-of-type(5) {
     border-radius: 100%;
   }
   19%,
-  27.5% {
+  34.5% {
     /* (1, 5) */
     left: calc(var(--blocks-phase-one-left) + 1 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 5 * var(--block-height));
@@ -823,7 +823,7 @@ building-block:nth-of-type(6) {
     border-radius: 100%;
   }
   19.5%,
-  27.5% {
+  34.5% {
     /* (2, 5) */
     left: calc(var(--blocks-phase-one-left) + 2 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 5 * var(--block-height));
@@ -890,7 +890,7 @@ building-block:nth-of-type(7) {
     border-radius: 100%;
   }
   20%,
-  27.5% {
+  34.5% {
     /* (4, 2) */
     left: calc(var(--blocks-phase-one-left) + 4 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 2 * var(--block-height));
@@ -957,7 +957,7 @@ building-block:nth-of-type(8) {
     border-radius: 100%;
   }
   20.5%,
-  27.5% {
+  34.5% {
     /* (4, 4) */
     left: calc(var(--blocks-phase-one-left) + 4 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 4 * var(--block-height));
@@ -1024,7 +1024,7 @@ building-block:nth-of-type(9) {
     border-radius: 100%;
   }
   21.5%,
-  27.5% {
+  34.5% {
     /* (6, 1) */
     left: calc(var(--blocks-phase-one-left) + 6 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 1 * var(--block-height));
@@ -1091,7 +1091,7 @@ building-block:nth-of-type(10) {
     border-radius: 100%;
   }
   22%,
-  27.5% {
+  34.5% {
     /* (7, 1) */
     left: calc(var(--blocks-phase-one-left) + 7 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 1 * var(--block-height));
@@ -1158,7 +1158,7 @@ building-block:nth-of-type(11) {
     border-radius: 100%;
   }
   22.5%,
-  27.5% {
+  34.5% {
     /* (7, 2) */
     left: calc(var(--blocks-phase-one-left) + 7 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 2 * var(--block-height));
@@ -1225,7 +1225,7 @@ building-block:nth-of-type(12) {
     border-radius: 100%;
   }
   23%,
-  27.5% {
+  34.5% {
     /* (7, 3) */
     left: calc(var(--blocks-phase-one-left) + 7 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 3 * var(--block-height));
@@ -1292,7 +1292,7 @@ building-block:nth-of-type(13) {
     border-radius: 100%;
   }
   23.5%,
-  27.5% {
+  34.5% {
     /* (7, 4) */
     left: calc(var(--blocks-phase-one-left) + 7 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 4 * var(--block-height));
@@ -1359,7 +1359,7 @@ building-block:nth-of-type(14) {
     border-radius: 100%;
   }
   24%,
-  27.5% {
+  34.5% {
     /* (7, 5) */
     left: calc(var(--blocks-phase-one-left) + 7 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 5 * var(--block-height));
@@ -1426,7 +1426,7 @@ building-block:nth-of-type(15) {
     border-radius: 100%;
   }
   24.5%,
-  27.5% {
+  34.5% {
     /* (6, 5) */
     left: calc(var(--blocks-phase-one-left) + 6 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 5 * var(--block-height));
@@ -1493,7 +1493,7 @@ building-block:nth-of-type(16) {
     border-radius: 100%;
   }
   25%,
-  27.5% {
+  34.5% {
     /* (7, 5) */
     left: calc(var(--blocks-phase-one-left) + 7 * var(--block-width));
     top: calc(var(--blocks-phase-one-top) + 5 * var(--block-height));
